[project]
name = "langgraphlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.1",
    "langgraph>=1.0.2",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
]
